RESOLVED FIXED151167
REGRESSION (r191407): Context menus are missing Services
https://bugs.webkit.org/show_bug.cgi?id=151167
Summary REGRESSION (r191407): Context menus are missing Services
Anders Carlsson
Reported 2015-11-11 16:44:25 PST
REGRESSION (r191407): Context menus are missing Services
Attachments
Patch (2.99 KB, patch)
2015-11-11 16:45 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-11-11 16:45:37 PST
Anders Carlsson
Comment 2 2015-11-11 16:47:31 PST
Note You need to log in before you can comment on or make changes to this bug.