REGRESSION (r191407): Context menus are missing Services https://bugs.webkit.org/show_bug.cgi?id=151167 rdar://problem/23500769

Reviewed by Tim Horton.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::showContextMenu):
Use contentsToRootView to better indicate which coordinate system we're using.

* WebProcess/WebPage/WebContextMenu.cpp:
(WebKit::WebContextMenu::show):
Use +[NSMenu popUpContextMenu:withEvent:forView:] so we'll get service menus where applicable.

Canonical link: https://commits.webkit.org/169353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192335 268f45cc-cd09-0410-ab3c-d52691b4dbfc