Source/WebKit2/UIProcess/mac/WebContextMenuProxyMac.mm
@@ -391,7 +391,10 @@ void WebContextMenuProxyMac::showContextMenu()
     m_menu = m_page.contextMenuClient().menuFromProposedMenu(m_page, menu.get(), m_context.webHitTestResultData());
 
     [[WKMenuTarget sharedMenuTarget] setMenuProxy:this];
-    [m_menu popUpMenuPositioningItem:nil atLocation:m_context.menuLocation() inView:m_webView];
+
+    NSPoint menuLocation = [m_webView convertPoint:m_context.menuLocation() toView:nil];
+    NSEvent *event = [NSEvent mouseEventWithType:NSRightMouseUp location:menuLocation modifierFlags:0 timestamp:0 windowNumber:m_webView.window.windowNumber context:nil eventNumber:0 clickCount:0 pressure:0];
+    [NSMenu popUpContextMenu:m_menu.get() withEvent:event forView:m_webView];
 }
 
 NSWindow *WebContextMenuProxyMac::window() const
